--- a/src/html/admin/admin.ejs
+++ b/src/html/admin/admin.ejs
@@ -73,6 +73,10 @@
                     <input id="post-input-title" type="text" />
                 </div>
                 <div class="section-input">
+                    <span>Sub Title</span>
+                    <input id="post-input-sub-title" type="text" />
+                </div>
+                <div class="section-input">
                     <span>TitleID</span>
                     <input id="post-input-titleId" type="number" />
                 </div>
