--- a/src/html/index.ejs
+++ b/src/html/index.ejs
@@ -54,186 +54,7 @@
 
     <main>
         <section id="paper-list">
-            <div class="_col_">
-                <div class="paper paper-post shadow">
-                    <div class="paper-post-title">
-                        <span data-attr="sub-title" class="sub-title">EUD 강좌</span>
-                        <span data-attr="title" class="title">시즈탱크로 마인을 심어보자</span>
-                    </div>
-                    <div class="paper-post-middle"><img data-attr="title-image" src="http://placehold.it/500x350" alt="img1" /></div>
-                    <div class="paper-post-bottom">
-                        <span class="paper-post-bottom-item">조회수</span><span data-attr="view-count" class="paper-post-bottom-count">35</span>
-                        <span class="paper-post-bottom-division">&#124;</span>
-                        <span class="paper-post-bottom-item">좋아요</span><span data-attr="like-count" class="paper-post-bottom-count">5</span>
-                        <span class="paper-post-bottom-division">&#124;</span>
-                        <span class="paper-post-bottom-item">댓글</span><span data-attr="comment-count" class="paper-post-bottom-count">8</span>
-                    </div>
-                    <hr />
-                    <div data-attr="tags" class="paper-tags">
-                        <span class="paper-tags-tag">#내용1</span>
-                        <span class="paper-tags-tag">#이건태그</span>
-                        <span class="paper-tags-tag">#여기도태그임</span>
-                        <span class="paper-tags-tag">#또태그</span>
-                    </div>
-                </div>
-                <div class="paper paper-post shadow">
-                    <div class="paper-post-title">
-                        <span data-attr="sub-title" class="sub-title">EUD 강좌</span>
-                        <span data-attr="title" class="title">시즈탱크로 마인을 심어보자</span>
-                    </div>
-                    <div class="paper-post-middle"><img data-attr="title-image" src="http://placehold.it/500x350" alt="img1" /></div>
-                    <div class="paper-post-bottom">
-                        <span class="paper-post-bottom-item">조회수</span><span data-attr="view-count" class="paper-post-bottom-count">35</span>
-                        <span class="paper-post-bottom-division">&#124;</span>
-                        <span class="paper-post-bottom-item">좋아요</span><span data-attr="like-count" class="paper-post-bottom-count">5</span>
-                        <span class="paper-post-bottom-division">&#124;</span>
-                        <span class="paper-post-bottom-item">댓글</span><span data-attr="comment-count" class="paper-post-bottom-count">8</span>
-                    </div>
-                    <hr />
-                    <div data-attr="tags" class="paper-tags">
-                        <span class="paper-tags-tag">#내용1</span>
-                        <span class="paper-tags-tag">#이건태그</span>
-                        <span class="paper-tags-tag">#여기도태그임</span>
-                        <span class="paper-tags-tag">#또태그</span>
-                    </div>
-                </div>
-            </div>
-            <div class="_col_">
-                <div class="paper paper-project shadow">
-                    <div class="paper-project-header"><span data-attr="title">Imagine</span></div>
-                    <div class="paper-project-progress"><span data-attr="progress" style="width: 70%;"></span></div>
-                    <div class="paper-project-main">
-                        <span data-attr="summary" class="summary">이미지 뷰어 jQuery 플러그인</span>
-                        <span class="git">
-                            <a data-attr="git" href="https://github.com/carret/memong" target="_blank"><img src="./project/github.png" /></a>
-                        </span>
-                    </div>
-                    <hr />
-                    <div data-attr="tags" class="paper-tags">
-                        <span class="paper-tags-tag">#Project</span>
-                        <span class="paper-tags-tag">#javascript</span>
-                        <span class="paper-tags-tag">#오픈소스</span>
-                    </div>
-                </div>
 
-                <div class="paper paper-about shadow">
-                    <div class="paper-about-header"><span data-attr="title">Profile</span></div>
-                    <div data-attr="main" class="paper-about-main">
-                        <div class="profile">
-                            <div class="profile-inner">
-                                <div class="profile-item">
-                                    <i class="material-icons">&#xE8F9;</i>
-                                    <span>SW Maestro 과정 6기</span>
-                                </div>
-                                <div class="profile-item">
-                                    <i class="material-icons">&#xE80C;</i>
-                                    <span>고려대학교 컴퓨터학과 재학중</span>
-                                </div>
-                                <div class="profile-item">
-                                    <i class="material-icons">&#xE7E9;</i>
-                                    <span>1997년 8월 31 출생</span>
-                                </div>
-                                <div class="profile-item">
-                                    <i class="material-icons">&#xE88A;</i>
-                                    <span>서울시 거주</span>
-                                </div>
-                                <div class="profile-item">
-                                    <i class="material-icons">&#xE0C8;</i>
-                                    <span>경상남도 진해 출신</span>
-                                </div>
-                            </div>
-                        </div>
-                        <hr />
-                        <div data-attr="tags" class="paper-tags">
-                            <span class="paper-tags-tag">#About</span>
-                            <span class="paper-tags-tag">#프로필</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="paper paper-product shadow">
-                    <div class="paper-product-header">
-                        <span data-attr="title" class="title">memong</span>
-                        <span data-attr="released" class="released">Released. 15-09-01</span>
-                    </div>
-                    <div class="paper-product-sumnail">
-                        <img data-attr="icon" src="./product/memong/memong-x256.png" alt="product" />
-                    </div>
-                    <hr />
-                    <div data-attr="summary" class="paper-product-summary">
-                        마크다운 기반의 웹 클라우드 용<br/> 노트 관리 텍스트 에디터
-                    </div>
-                    <hr />
-                    <div data-attr="tags" class="paper-tags">
-                        <span class="paper-tags-tag">#Product</span>
-                        <span class="paper-tags-tag">#web</span>
-                        <span class="paper-tags-tag">#메모</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="_col_">
-                <div class="paper paper-about shadow">
-                    <div class="paper-about-header"><span data-attr="title">Contact</span></div>
-                    <div data-attr="main" class="paper-about-main">
-                        <div class="contact">
-                            <div class="contact-inner">
-                                <div class="contact-inner-row">
-                                    <div class="contact-item">
-                                        <img src="./about/facebook.png" alt="facebook" />
-                                        <span>Facebook</span>
-                                    </div>
-                                    <div class="contact-item">
-                                        <img src="./about/gmail.png" alt="gmail" />
-                                        <span>Gmail</span>
-                                    </div>
-                                </div>
-                                <div class="contact-inner-row">
-                                    <div class="contact-item">
-                                        <img src="./about/linkedin.png" alt="linkedin" />
-                                        <span>LinkedIn</span>
-                                    </div>
-                                    <div class="contact-item">
-                                        <img src="./about/github.png" alt="github" />
-                                        <span>Github</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <hr />
-                        <div data-attr="tags" class="paper-tags">
-                            <span class="paper-tags-tag">#About</span>
-                            <span class="paper-tags-tag">#연락</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="paper paper-app shadow">
-                    <a data-attr="main" class="title">
-                        <i class="material-icons">&#xE85C;</i>
-                        <span>Statistics</span>
-                    </a>
-                </div>
-                <div class="paper paper-post shadow">
-                    <div class="paper-post-title">
-                        <span data-attr="sub-title" class="sub-title">EUD 강좌</span>
-                        <span data-attr="title" class="title">시즈탱크로 마인을 심어보자</span>
-                    </div>
-                    <div class="paper-post-middle"><img data-attr="title-image" src="http://placehold.it/500x350" alt="img1" /></div>
-                    <div class="paper-post-bottom">
-                        <span class="paper-post-bottom-item">조회수</span><span data-attr="view-count" class="paper-post-bottom-count">35</span>
-                        <span class="paper-post-bottom-division">&#124;</span>
-                        <span class="paper-post-bottom-item">좋아요</span><span data-attr="like-count" class="paper-post-bottom-count">5</span>
-                        <span class="paper-post-bottom-division">&#124;</span>
-                        <span class="paper-post-bottom-item">댓글</span><span data-attr="comment-count" class="paper-post-bottom-count">8</span>
-                    </div>
-                    <hr />
-                    <div data-attr="tags" class="paper-tags">
-                        <span class="paper-tags-tag">#내용1</span>
-                        <span class="paper-tags-tag">#이건태그</span>
-                        <span class="paper-tags-tag">#여기도태그임</span>
-                        <span class="paper-tags-tag">#또태그</span>
-                    </div>
-                </div>
-            </div>
         </section>
 
         <section class="main-footer">
@@ -247,15 +68,37 @@
     </footer>
 
 
-    <section id="PAPER_LIST"></section>
-    <div id="COL" class="_col_"></div>
+    <div id="COL" class="_col_" style="display: none;"></div>
 
+    <div id="PAPER_POST" class="paper paper-post" style="display: none;">
+        <div class="pre-post-box">
+            <div class="spinner">
+                <div class="bounce1"></div>
+                <div class="bounce2"></div>
+                <div class="bounce3"></div>
+            </div>
+        </div>
+        <div class="paper-post-title">
+            <span data-attr="sub-title" class="sub-title"></span>
+            <span data-attr="title" class="title"></span>
+        </div>
+        <div class="paper-post-middle"><img data-attr="title-image" alt="title-image" /></div>
+        <div class="paper-post-bottom">
+            <span class="paper-post-bottom-item">조회수</span><span data-attr="view-count" class="paper-post-bottom-count"></span>
+            <span class="paper-post-bottom-division">&#124;</span>
+            <span class="paper-post-bottom-item">좋아요</span><span data-attr="like-count" class="paper-post-bottom-count"></span>
+            <span class="paper-post-bottom-division">&#124;</span>
+            <span class="paper-post-bottom-item">댓글</span><span data-attr="comment-count" class="paper-post-bottom-count"></span>
+        </div>
+        <hr />
+        <div data-attr="tags" class="paper-tags">
+        </div>
+    </div>
+    <div id="PAPER_PRODUCT" class="paper paper-product shadow" style="display: none;"></div>
+    <div id="PAPER_PROJECT" class="paper paper-project shadow" style="display: none;"></div>
+    <div id="PAPER_APP" class="paper paper-app shadow" style="display: none;"></div>
 
-    <div id="PAPER_PRODUCT" class="paper paper-product shadow"></div>
-    <div id="PAPER_PROJECT" class="paper paper-project shadow"></div>
-    <div id="PAPER_APP" class="paper paper-app shadow"></div>
-
-    <script>
+    <script defer>
 
         (function(d, s, id){
             var js, fjs = d.getElementsByTagName(s)[0];
@@ -265,6 +108,6 @@
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
     </script>
-    <script src="/js/main.js" type="text/javascript"></script>
+    <script defer src="/js/main.js" type="text/javascript"></script>
 </body>
 </html>
